--- a/package.json
+++ b/package.json
@@ -1,23 +1,39 @@
 {
   "name": "vue-checkbox-list",
-  "version": "1.0.0",
-  "description": "a vue plugin for checkbox-list",
-  "main": "index.js",
+  "description": "a vue plugin for checkbok list",
+  "version": "1.0.1",
+  "author": "bill.mark <weiguicheng@foxmail.com>",
+  "license": "MIT",
+  "private": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+  },
+  "dependencies": {
+    "vue": "^2.5.11"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/bill-mark/vue-checkbox-list.git"
+    "url": "git@github.com:bill-mark/vue-checkbox-list.git"
   },
-  "keywords": [
-    "vue",
-    "checkboxlist"
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
   ],
-  "author": "bill.mark.mark",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/bill-mark/vue-checkbox-list/issues"
-  },
-  "homepage": "https://github.com/bill-mark/vue-checkbox-list#readme"
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.4",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "vue-loader": "^13.0.5",
+    "vue-template-compiler": "^2.4.4",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
+  }
 }
