--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "vue-checkbox-list",
   "description": "a vue plugin for checkbok list",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "author": "bill.mark <weiguicheng@foxmail.com>",
   "license": "MIT",
   "private": false,
+  "main": "dist/build.js",
+  "homepage": "https://github.com/bill-mark/vue-checkbox-list#readme",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
