--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "vue-checkbox-list",
   "description": "a vue plugin for checkbok list",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "author": "bill.mark <weiguicheng@foxmail.com>",
   "license": "MIT",
   "private": false,
-  "main": "dist/build.js",
+  "main": "src/lib/index.js",
   "homepage": "https://github.com/bill-mark/vue-checkbox-list#readme",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
